// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assigning react elements 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "block": Object {
        "line": 2,
        "nodes": Array [
          Object {
            "attributeBlocks": Array [],
            "attrs": Array [
              Object {
                "column": 6,
                "line": 2,
                "mustEscape": false,
                "name": "class",
                "val": "'hello'",
              },
            ],
            "block": Object {
              "line": 2,
              "nodes": Array [
                Object {
                  "column": 7,
                  "line": 3,
                  "type": "Text",
                  "val": "World",
                },
              ],
              "type": "Block",
            },
            "column": 3,
            "isInline": false,
            "line": 2,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 1,
      "mustEscape": false,
      "type": "Code",
      "val": "const foo =",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 4,
          "line": 5,
          "mustEscape": false,
          "name": "class",
          "val": "'hello'",
        },
      ],
      "block": Object {
        "line": 5,
        "nodes": Array [
          Object {
            "attributeBlocks": Array [],
            "attrs": Array [
              Object {
                "column": 13,
                "line": 6,
                "mustEscape": true,
                "name": "name",
                "val": "foo",
              },
            ],
            "block": Object {
              "line": 6,
              "nodes": Array [],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 6,
            "name": "SomeTag",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 5,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Assigning react elements 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function TestComponent(props: any) {
  const foo = <div className={\\"hello\\"}>World</div>;
  return (
    <div className={\\"hello\\"}>
      <SomeTag name={foo} />
    </div>
  );
}
",
}
`;

exports[`Interleaved unbuffered code 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 1,
      "mustEscape": false,
      "type": "Code",
      "val": "const foo = \\"bar\\";",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 1,
          "line": 2,
          "mustEscape": false,
          "name": "id",
          "val": "'bar'",
        },
        Object {
          "column": 5,
          "line": 2,
          "mustEscape": false,
          "name": "class",
          "val": "'foo'",
        },
      ],
      "block": Object {
        "line": 2,
        "nodes": Array [
          Object {
            "attributeBlocks": Array [],
            "attrs": Array [
              Object {
                "column": 5,
                "line": 3,
                "mustEscape": false,
                "name": "class",
                "val": "'foo__node'",
              },
              Object {
                "column": 15,
                "line": 3,
                "mustEscape": false,
                "name": "class",
                "val": "'foo__node--aspect'",
              },
            ],
            "block": Object {
              "line": 3,
              "nodes": Array [
                Object {
                  "column": 34,
                  "line": 3,
                  "type": "Text",
                  "val": "Test",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 3,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 2,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
    Object {
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 4,
      "mustEscape": false,
      "type": "Code",
      "val": "const bar = \\"baz\\";",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 4,
          "line": 5,
          "mustEscape": false,
          "name": "class",
          "val": "'hello'",
        },
      ],
      "block": Object {
        "line": 5,
        "nodes": Array [
          Object {
            "buffer": true,
            "column": 5,
            "isInline": false,
            "line": 6,
            "mustEscape": true,
            "type": "Code",
            "val": "\`Hello \\\\\${foo} \\\\\${bar}\`",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 5,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Interleaved unbuffered code 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function SampleComponent(props: any) {
  const foo = \\"bar\\";
  return (
    <>
      <div id={\\"bar\\"} className={\\"foo\\"}>
        <div className={[\\"foo__node\\", \\"foo__node--aspect\\"].join(\\" \\")}>Test</div>
      </div>
      {(() => {
        const bar = \\"baz\\";
        return <div className={\\"hello\\"}>{\`Hello \\\\\${foo} \\\\\${bar}\`}</div>;
      })()}
    </>
  );
}
",
}
`;

exports[`Internal functions returning JSX 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "block": Object {
        "line": 2,
        "nodes": Array [
          Object {
            "attributeBlocks": Array [],
            "attrs": Array [
              Object {
                "column": 6,
                "line": 2,
                "mustEscape": false,
                "name": "class",
                "val": "'hello'",
              },
            ],
            "block": Object {
              "line": 2,
              "nodes": Array [
                Object {
                  "column": 7,
                  "line": 3,
                  "type": "Text",
                  "val": "World",
                },
              ],
              "type": "Block",
            },
            "column": 3,
            "isInline": false,
            "line": 2,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 1,
      "mustEscape": false,
      "type": "Code",
      "val": "const SomeTag = () =>",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 4,
          "line": 5,
          "mustEscape": false,
          "name": "class",
          "val": "'hello'",
        },
      ],
      "block": Object {
        "line": 5,
        "nodes": Array [
          Object {
            "attributeBlocks": Array [],
            "attrs": Array [
              Object {
                "column": 13,
                "line": 6,
                "mustEscape": true,
                "name": "name",
                "val": "foo",
              },
            ],
            "block": Object {
              "line": 6,
              "nodes": Array [],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 6,
            "name": "SomeTag",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 5,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Internal functions returning JSX 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function TestComponent(props: any) {
  const SomeTag = () => <div className={\\"hello\\"}>World</div>;

  return (
    <div className={\\"hello\\"}>
      <SomeTag name={foo} />
    </div>
  );
}
",
}
`;

exports[`Interpolated Code 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 1,
      "mustEscape": false,
      "type": "Code",
      "val": "const foo = \\"bar\\";",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 1,
          "line": 2,
          "mustEscape": false,
          "name": "id",
          "val": "'bar'",
        },
        Object {
          "column": 5,
          "line": 2,
          "mustEscape": false,
          "name": "class",
          "val": "'foo'",
        },
      ],
      "block": Object {
        "line": 2,
        "nodes": Array [
          Object {
            "attributeBlocks": Array [],
            "attrs": Array [
              Object {
                "column": 5,
                "line": 3,
                "mustEscape": false,
                "name": "class",
                "val": "'foo__node'",
              },
              Object {
                "column": 15,
                "line": 3,
                "mustEscape": false,
                "name": "class",
                "val": "'foo__node--aspect'",
              },
              Object {
                "column": 34,
                "line": 3,
                "mustEscape": true,
                "name": "data-bar",
                "val": "\\"baz\\"",
              },
            ],
            "block": Object {
              "line": 3,
              "nodes": Array [
                Object {
                  "buffer": true,
                  "column": 49,
                  "isInline": true,
                  "line": 3,
                  "mustEscape": true,
                  "type": "Code",
                  "val": "foo",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 3,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 2,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 4,
          "line": 4,
          "mustEscape": false,
          "name": "class",
          "val": "'hello'",
        },
      ],
      "block": Object {
        "line": 4,
        "nodes": Array [
          Object {
            "buffer": true,
            "column": 5,
            "isInline": false,
            "line": 5,
            "mustEscape": true,
            "type": "Code",
            "val": "\`Hello \\\\\${foo}\`",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 4,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Interpolated Code 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function SampleComponent(props: any) {
  const foo = \\"bar\\";
  return (
    <>
      <div id={\\"bar\\"} className={\\"foo\\"}>
        <div
          data-bar={\\"baz\\"}
          className={[\\"foo__node\\", \\"foo__node--aspect\\"].join(\\" \\")}
        >
          {foo}
        </div>
      </div>
      <div className={\\"hello\\"}>{\`Hello \\\\\${foo}\`}</div>
    </>
  );
}
",
}
`;

exports[`Lifted function components 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 8,
          "line": 1,
          "mustEscape": true,
          "name": "type",
          "val": "\\"text/molosser\\"",
        },
      ],
      "block": Object {
        "line": 1,
        "nodes": Array [
          Object {
            "block": Object {
              "line": 3,
              "nodes": Array [
                Object {
                  "buffer": false,
                  "column": 9,
                  "isInline": false,
                  "line": 3,
                  "mustEscape": false,
                  "type": "Code",
                  "val": "const [currentCount, setCount] = useState(0)",
                },
                Object {
                  "attributeBlocks": Array [],
                  "attrs": Array [
                    Object {
                      "column": 12,
                      "line": 4,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'hello'",
                    },
                  ],
                  "block": Object {
                    "line": 4,
                    "nodes": Array [
                      Object {
                        "buffer": true,
                        "column": 13,
                        "isInline": false,
                        "line": 5,
                        "mustEscape": true,
                        "type": "Code",
                        "val": "currentCount",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 4,
                  "name": "div",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "buffer": false,
            "column": 5,
            "isInline": false,
            "line": 2,
            "mustEscape": false,
            "type": "Code",
            "val": "const SomeTag = () =>",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "script",
      "selfClosing": false,
      "type": "Tag",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 4,
          "line": 7,
          "mustEscape": false,
          "name": "class",
          "val": "'hello'",
        },
      ],
      "block": Object {
        "line": 7,
        "nodes": Array [
          Object {
            "attributeBlocks": Array [],
            "attrs": Array [
              Object {
                "column": 13,
                "line": 8,
                "mustEscape": true,
                "name": "name",
                "val": "foo",
              },
            ],
            "block": Object {
              "line": 8,
              "nodes": Array [],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 8,
            "name": "SomeTag",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 7,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Lifted function components 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

const SomeTag = () => {
  const [currentCount, setCount] = useState(0);
  return <div className={\\"hello\\"}>{currentCount}</div>;
};

export default function TestComponent(props: any) {
  return (
    <div className={\\"hello\\"}>
      <SomeTag name={foo} />
    </div>
  );
}
",
}
`;

exports[`Props interface detection 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [],
      "block": Object {
        "line": 1,
        "nodes": Array [
          Object {
            "column": 5,
            "line": 2,
            "type": "Text",
            "val": "interface ITestComponentProps {",
          },
          Object {
            "column": 1,
            "line": 3,
            "type": "Text",
            "val": "
",
          },
          Object {
            "column": 5,
            "line": 3,
            "type": "Text",
            "val": "    foo: string;",
          },
          Object {
            "column": 1,
            "line": 4,
            "type": "Text",
            "val": "
",
          },
          Object {
            "column": 5,
            "line": 4,
            "type": "Text",
            "val": "}",
          },
          Object {
            "column": 1,
            "line": 5,
            "type": "Text",
            "val": "
",
          },
          Object {
            "column": 5,
            "line": 5,
            "type": "Text",
            "val": "",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "script",
      "selfClosing": false,
      "textOnly": true,
      "type": "Tag",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 4,
          "line": 6,
          "mustEscape": false,
          "name": "class",
          "val": "'hello'",
        },
      ],
      "block": Object {
        "line": 6,
        "nodes": Array [
          Object {
            "attributeBlocks": Array [],
            "attrs": Array [
              Object {
                "column": 13,
                "line": 7,
                "mustEscape": true,
                "name": "name",
                "val": "props.foo",
              },
            ],
            "block": Object {
              "line": 7,
              "nodes": Array [],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 7,
            "name": "SomeTag",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 6,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Props interface detection 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

interface ITestComponentProps {
  foo: string;
}

export default function TestComponent(props: ITestComponentProps) {
  return (
    <div className={\\"hello\\"}>
      <SomeTag name={props.foo} />
    </div>
  );
}
",
}
`;

exports[`Render props 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 11,
          "line": 1,
          "mustEscape": false,
          "name": "class",
          "val": "'Consumer'",
        },
      ],
      "block": Object {
        "line": 1,
        "nodes": Array [
          Object {
            "block": Object {
              "line": 3,
              "nodes": Array [
                Object {
                  "alternate": Object {
                    "line": 6,
                    "nodes": Array [
                      Object {
                        "attributeBlocks": Array [],
                        "attrs": Array [
                          Object {
                            "column": 13,
                            "line": 6,
                            "mustEscape": false,
                            "name": "id",
                            "val": "'workspace'",
                          },
                        ],
                        "block": Object {
                          "line": 6,
                          "nodes": Array [
                            Object {
                              "column": 24,
                              "line": 6,
                              "type": "Text",
                              "val": "Failure",
                            },
                          ],
                          "type": "Block",
                        },
                        "column": 13,
                        "isInline": false,
                        "line": 6,
                        "name": "div",
                        "selfClosing": false,
                        "type": "Tag",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "consequent": Object {
                    "line": 4,
                    "nodes": Array [
                      Object {
                        "attributeBlocks": Array [],
                        "attrs": Array [
                          Object {
                            "column": 13,
                            "line": 4,
                            "mustEscape": false,
                            "name": "id",
                            "val": "'workspace'",
                          },
                        ],
                        "block": Object {
                          "line": 4,
                          "nodes": Array [
                            Object {
                              "column": 24,
                              "line": 4,
                              "type": "Text",
                              "val": "Success",
                            },
                          ],
                          "type": "Block",
                        },
                        "column": 13,
                        "isInline": false,
                        "line": 4,
                        "name": "div",
                        "selfClosing": false,
                        "type": "Tag",
                      },
                    ],
                    "type": "Block",
                  },
                  "line": 3,
                  "test": "app.repositoryRoot",
                  "type": "Conditional",
                },
              ],
              "type": "Block",
            },
            "buffer": true,
            "column": 5,
            "isInline": false,
            "line": 2,
            "mustEscape": true,
            "type": "Code",
            "val": "(app) =>",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "AppContext",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Render props 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function(props: any) {
  return (
    <AppContext className={\\"Consumer\\"}>
      {app =>
        app.repositoryRoot ? (
          <div id={\\"workspace\\"}>Success</div>
        ) : (
          <div id={\\"workspace\\"}>Failure</div>
        )
      }
    </AppContext>
  );
}
",
}
`;

exports[`Tag composition 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 1,
          "line": 1,
          "mustEscape": false,
          "name": "id",
          "val": "'bar'",
        },
        Object {
          "column": 5,
          "line": 1,
          "mustEscape": false,
          "name": "class",
          "val": "'foo'",
        },
      ],
      "block": Object {
        "line": 1,
        "nodes": Array [
          Object {
            "attributeBlocks": Array [],
            "attrs": Array [
              Object {
                "column": 5,
                "line": 2,
                "mustEscape": false,
                "name": "class",
                "val": "'foo__node'",
              },
              Object {
                "column": 15,
                "line": 2,
                "mustEscape": false,
                "name": "class",
                "val": "'foo__node--aspect'",
              },
              Object {
                "column": 34,
                "line": 2,
                "mustEscape": true,
                "name": "data-bar",
                "val": "\\"baz\\"",
              },
            ],
            "block": Object {
              "line": 2,
              "nodes": Array [
                Object {
                  "column": 11,
                  "line": 3,
                  "type": "Text",
                  "val": "Hello world",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 2,
            "name": "div",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Tag composition 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function SampleComponent(props: any) {
  return (
    <div id={\\"bar\\"} className={\\"foo\\"}>
      <div
        data-bar={\\"baz\\"}
        className={[\\"foo__node\\", \\"foo__node--aspect\\"].join(\\" \\")}
      >
        Hello world
      </div>
    </div>
  );
}
",
}
`;

exports[`Top level scripts 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [],
      "block": Object {
        "line": 1,
        "nodes": Array [
          Object {
            "column": 5,
            "line": 2,
            "type": "Text",
            "val": "import SomeTag from \\"./SomeTag\\";",
          },
          Object {
            "column": 1,
            "line": 3,
            "type": "Text",
            "val": "
",
          },
          Object {
            "column": 5,
            "line": 3,
            "type": "Text",
            "val": "",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "script",
      "selfClosing": false,
      "textOnly": true,
      "type": "Tag",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 4,
          "line": 4,
          "mustEscape": false,
          "name": "class",
          "val": "'hello'",
        },
      ],
      "block": Object {
        "line": 4,
        "nodes": Array [
          Object {
            "attributeBlocks": Array [],
            "attrs": Array [
              Object {
                "column": 13,
                "line": 5,
                "mustEscape": true,
                "name": "name",
                "val": "props.foo",
              },
            ],
            "block": Object {
              "line": 5,
              "nodes": Array [],
              "type": "Block",
            },
            "column": 5,
            "isInline": false,
            "line": 5,
            "name": "SomeTag",
            "selfClosing": false,
            "type": "Tag",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 4,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Top level scripts 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

import SomeTag from \\"./SomeTag\\";

export default function(props: any) {
  return (
    <div className={\\"hello\\"}>
      <SomeTag name={props.foo} />
    </div>
  );
}
",
}
`;
